--- a/pytropd/xr_tutorial.ipynb
+++ b/pytropd/xr_tutorial.ipynb
@@ -55,7 +55,7 @@
     "import numpy as np\n",
     "import xarray as xr\n",
     "import matplotlib.pyplot as plt\n",
-    "import metrics\n",
+    "import pytropd as pyt\n",
     "from pathlib import Path\n",
     "import matplotlib.ticker as mtick\n",
     "from pandas import date_range\n",
